--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ numpy==1.9.0
 scikit-learn==0.15.2
 scipy==0.14.0
 pytz==2014.7
-
 bzr+https://code.launchpad.net/~dateutil/dateutil/trunk 
 git+git://github.com/ftzeng/pyner
+networkx==1.9.1
