--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ pytz==2014.7
 bzr+https://code.launchpad.net/~dateutil/dateutil/trunk 
 git+git://github.com/ftzeng/pyner
 networkx==1.9.1
+matplotlib==1.4.0
