--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
 Jinja2==2.7.3
 MarkupSafe==0.23
+certifi==14.05.14
 click==3.3
+decorator==3.4.0
+ipdb==0.8
+ipython==2.2.0
+matplotlib==1.4.0
+ner==0.1
+networkx==1.9.1
 nltk==3.0.0
+nose==1.3.4
 numpy==1.9.0
+pygraphviz==1.3rc2
+pyparsing==2.0.2
+python-dateutil==2.2
+pytz==2014.7
+pyzmq==14.3.1
 scikit-learn==0.15.2
 scipy==0.14.0
-pytz==2014.7
-bzr+https://code.launchpad.net/~dateutil/dateutil/trunk 
-git+git://github.com/ftzeng/pyner
-networkx==1.9.1
-matplotlib==1.4.0
+six==1.8.0
+tornado==4.0.2
