--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Jinja2==2.7.3
 MarkupSafe==0.23
+PySide==1.2.2
 Pympler==0.3.1
 click==3.3
 decorator==3.4.0
+gnureadline==6.3.3
 ipython==2.2.0
 matplotlib==1.4.0
 memory-profiler==0.32
