--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==3.3
 decorator==3.4.0
 gnureadline==6.3.3
 ipython==2.2.0
+line-profiler==1.0
 matplotlib==1.4.0
 memory-profiler==0.32
 ner==0.1
@@ -14,6 +15,7 @@ nltk==3.0.0
 nose==1.3.4
 numpy==1.9.0
 psutil==2.1.3
+pygraphviz==1.3rc2
 pyparsing==2.0.3
 python-dateutil==2.2
 pytz==2014.7
