--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Cython==0.21.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 PySide==1.2.2
@@ -13,6 +14,7 @@ ner==0.1
 networkx==1.9.1
 nltk==3.0.0
 nose==1.3.4
+numexpr==2.4
 numpy==1.9.0
 psutil==2.1.3
 pygraphviz==1.3rc2
@@ -22,3 +24,4 @@ pytz==2014.7
 scikit-learn==0.15.2
 scipy==0.14.0
 six==1.8.0
+tables==3.1.1
