--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Cython==0.21.1
 Jinja2==2.7.3
 MarkupSafe==0.23
-PySide==1.2.2
 Pympler==0.3.1
 click==3.3
 decorator==3.4.0
@@ -11,14 +10,12 @@ ipython==2.2.0
 line-profiler==1.0
 matplotlib==1.4.0
 memory-profiler==0.32
-ner==0.1
 networkx==1.9.1
 nltk==3.0.0
 nose==1.3.4
 numexpr==2.4
 numpy==1.9.0
 psutil==2.1.3
-pygraphviz==1.3rc2
 pyparsing==2.0.3
 python-dateutil==2.2
 pytz==2014.7
@@ -26,5 +23,7 @@ scikit-learn==0.15.2
 scipy==0.14.0
 six==1.8.0
 tables==3.1.1
-topia.termextract==1.1.0
 zope.interface==4.1.1
+
+git+git://github.com:ftzeng/topia.termextract
+git+git://github.com/dat/pyner
